Mise au point Swagger
