# routes/api.php
@@ -12,11 +12,15 @@ Route::prefix('v1')->group(function () {
     Route::post('/user/register', UserController::class . '@store')->name('api_register');
     Route::post('/user/login', UserController::class . '@login')->name('api_login');
 });
+
 Route::middleware('auth:sanctum')->prefix('v1')->group(function () {
+
     Route::get('/user', UserController::class . '@index')->name('user');
+    Route::get('/user/{id}', UserController::class . '@show')->name('show');
     Route::put('/user/{id}', UserController::class . '@update')->name('update');
     Route::delete('/user/{id}', UserController::class . '@destroy')->name('delete');
     Route::apiResource('products', ProductController::class);
+    Route::get('/category/{id}/products', Categorycontroller::class . '@productsByCategory')->name('productsByCategory');
     Route::apiResource('category', Categorycontroller::class);
 });
 
